# iit-inail2upperbody-ros-pkg

./: CMakeLists.txt  README.md
doc/: HYQ_torso.docx
inail2upperbody_cartesio/: CMakeLists.txt  package.xml
inail2upperbody_cartesio/config/: inail2upperbody_cartesio.rviz  inail2upperbody_simple_stack.yaml
inail2upperbody_cartesio/launch/: inail2upperbody_cartesio.launch
inail2upperbody_srdf/: CMakeLists.txt  package.xml
inail2upperbody_srdf/srdf/: inail2upperbody.srdf.xacro
inail2upperbody_urdf/: package.xml
inail2upperbody_urdf/config/: inail2upperbody_rviz.rviz
inail2upperbody_urdf/launch/: inail2upperbody.launch  inail2upperbody_with_ee.launch
inail2upperbody_urdf/meshes/simple/: inail_torso.stl
inail2upperbody_urdf/urdf/: arms.urdf.xacro  inail2torso.urdf.xacro  inail2upperbody.urdf.xacro  inertial_properties.urdf.xacro  kinematics_properties.urdf.xacro  materials.urdf.xacro
